feat: Update to graphql-java 16.1